LIBRARIES-1671 - update to springboot3 and java21/migration to junit5/mockito (#24)
* Migrate to Spring Boot 3.5.16 / Java 21

Bumps java.version to 21, spring-boot to 3.5.16 (spring 6.2.19), and all
build plugins (compiler, surefire/failsafe, enforcer, source, javadoc,
jacoco) to their Boot-3.5-compatible releases. Adds the Lombok
annotationProcessorPath explicitly to the compiler plugin, since javac
--release 21 on a JDK 25 host no longer auto-discovers Lombok's
annotation processor from the plain classpath.

Depends on springtainer-common 2.0.0 (already migrated). Bumps
mockserver-client-java 5.15.0 -> 7.4.0 and the default mockserver docker
image tag to match; re-audited the dependency tree after the jump and
dropped the entire legacy exclusion list (hamcrest-core, jsr305, guava,
commons-beanutils, commons-codec, commons-logging, commons-lang3, the
three jackson artifacts, jakarta.xml.bind-api, logback, slf4j-api) plus
the now-unneeded netty exclusions on springtainer-common and the
standalone commons-beanutils dependency, none of which still exclude or
pin anything real; the remaining minor-version convergence warnings
(jackson, guava, commons-lang3/codec/io, bouncycastle) are informational
only (enforcer fail=false) and resolve to sane versions via Maven's
nearest-wins mediation.

Converts all tests from JUnit4 to JUnit5 Jupiter, including
@RunWith(SpringRunner.class) -> @ExtendWith(SpringExtension.class).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Bump springtainer-common to 2.0.1 to fix javax.annotation.Priority NoClassDefFoundError

springtainer-common 2.0.1 adds an explicit javax.annotation-api dependency to
work around docker-java's Jersey transport needing javax.annotation.Priority
at runtime, which Boot 3's jakarta.annotation-api does not provide. Without
this, real Docker-container tests fail with NoClassDefFoundError when
AbstractBuildingEmbeddedContainer starts a container. Patch-bump this
module's own version accordingly.

* Exclude